Melengkapi Endpoint API
